--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "4.3.0",
   "private": true,
   "author": {
-    "name": "Safdar Jamal",
-    "url": "https://safdarjamal.github.io"
+    "name": "Kushal Agrawal",
+    "url": "https://kushal98.github.io"
   },
-  "homepage": "https://safdarjamal.github.io/quiz-app",
+  "homepage": "https://kushal98.github.io/quiz-app",
   "dependencies": {
     "he": "^1.2.0",
     "react": "^16.12.0",
